--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tmdb-dyerman</title>
+    <meta property="og:title" content="TMDB Dyerman" />
+    <meta property="og:description" content="Movie database app built with React" />
+    <meta property="og:url" content="https://tmdb-dyerman.vercel.app" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
